# cmake_stm32

./: .gitmodules  CMakeLists.txt  LICENSE  Project.cfg  README.md
cmake/: FindFreeRTOS.cmake
code/template/: CMakeLists.txt  FreeRTOSConfig.h
src/: main.c  stm32f3xx_hal_msp.c
